2007-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Eliminated unnecessary check_result()
  - Exec() cached protocol version across connection resets
 src/result.cxx:
  - If result contains an error but has no PG_DIAG_SQLSTATE, throw sql_error
2006-12-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/transaction_base.hxx, src/transaction_base.cxx:
  - Just one version of exec(), taking const string references
  - May fix lifetime-of-temporaries bug (query string was dying early)
2006-12-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Print libpq/backend configurations to test logs
2006-12-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, include/pqxx/connection_base.hxx,
 src/connection_base.cxx:
  - Support password encryption, thanks tometzky
2006-12-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Check for existence of /proc/cpuinfo before reading it
  - Set CONCURRENCY_LEVEL to 1 if no other value available
2006-12-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/splitconfig:
  - Blank lines before grep warnings (looks better in configure)
  - replaced "grepcode" variable with "GREPCODE"
  - Use "test -n" instead of "! test -z"
2006-12-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx:
  - absolute_cursor is about ready for use
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Added capability cap_table_column
  - Warning about deactivated connections and supports()
  - Re-use server_version() and protocol_version()
  - Activate connection before checking prepared-statements capability
  - Don't use PQexecPrepared() with old backends
 src/cursor.cxx:
  - Activate connection before checking scroll capability
 test/test085.cxx, test/test091.cxx, test/test092.cxx, test/test093.cxx:
  - Skip test if essential backend features missing
 tools/pqxx-fulltest:
  - New
  - Tests across all available combinations of frontends and backends